# knowledge-base

./: README.md  pyproject.toml  wiki
config/: llm_wiki.example.toml  llm_wiki.toml
knowledge/raw/: XR-AI.md  augmented-obj.md  guidance-review.md  llm-wiki-idea.md  reality-promises.md  review-family.md  semantic-reality.md  typology-review.md  write-review.md
knowledge/schema/: AGENTS.md
knowledge/wiki/: index.md  log.md  overview.md
knowledge/wiki/analyses/: aoi-vs-reality-promises.md  xr-ai-intersection.md  xr-ai-topics.md  xr-objects-system.md
knowledge/wiki/concepts/: artificial-intelligence.md  augmented-object-intelligence.md  extended-reality.md  reality-promises.md  review-methodologies.md  semantic-reality.md  virtual-reality.md  xr-ai-intersection.md
knowledge/wiki/sources/: XR-AI.md  augmented-obj.md  guidance-review.md  llm-wiki-idea.md  reality-promises.md  review-family.md  semantic-reality.md  typology-review.md  write-review.md
src/llm_wiki/: __init__.py  assistant.py  cli.py  config.py  gui.py  knowledge.py  link_tools.py  markdown_render.py  models.py  prompts.py  providers.py  search.py  utils.py
src/llm_wiki/web/: app.css  app.js  index.html
tests/: test_gui.py  test_link_tools.py  test_providers.py  test_search.py  test_workflows.py
