[project]
name = "llm-wiki"
version = "0.1.0"
description = "Terminal-first personal knowledge base assistant backed by pluggable LLM providers."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_wiki = ["web/*"]
